  do_browse_from()
	- Rework handling of the results of getcwd() in order to avoid
	  segfaults if they fail, and to remove uses of the nonportable
	  GNU extension where passing a size of 0 will get a string as
	  long as we need. (DLR)
- nano.c:
  help_init()
	- When calculating allocsize, take multibyte characters into
	  account, and keep the column number limits consistent. (DLR)
  print1opt()
	- Don't include longflag if HAVE_GETOPT_LONG isn't defined.
	  Rename this function to print1opt_full(), leave out the
	  longflag parameter if HAVE_GETOPT_LONG isn't defined, and make
	  print1opt() a macro for print1opt_full() that does that
	  without the need for a lot of extra #ifdefs. (David
	  Benbennick)  DLR: Rename print1opt_f() to print1opt_full().
	- Rework the special case of options that are ignored for Pico
	  compatibility so that they display more neatly when
	  HAVE_GETOPT_LONG isn't defined. (DLR)
  usage()
	- Fix erroneous #ifdef that resulted in the -d/--rebinddelete
	  option's not being printed when NANO_SMALL was defined. (DLR)
  find_paragraph()
	- Fix problem where a search for the next paragraph would skip
	  over certain cases of one-line paragraphs. (DLR)
  do_justify()
	- Instead of breaking a line at a space and readding the space
	  afterwards, just break the line after the space, as it's more
	  efficient. (DLR)
  main()
	- Change 0 to NULL in the option struct where needed. (David
	  Benbennick)
- nano.h:
	- Define PATH_MAX as 4096 if it isn't defined, as passing a size
	  of 0 to get a string as long as we need is a nonportable GNU
	  extension, and hence it won't work on non-GNU systems that
	  don't define PATH_MAX. (DLR)
- rcfile.c:
  parse_rcfile()
	- Fix debugging message to display the long value of a flag
	  properly. (DLR)
- utils.c:
  regexec_safe()
	- Rename to safe_regexec() for consistency. (DLR)
- winio.c:
  titlebar()
	- Make sure that the (mv)?waddnstr() calls take the proper